# LineraTetris

./: .env  README.md  index.html  linera.json  package-lock.json  package.json
contracts/: Cargo.toml  optimized.wasm  tetris.rs  tetris_impl.rs
contracts/src/: lib.rs  tetris.rs  tetris_impl.rs
contracts/tetris_common/: Cargo.toml
contracts/tetris_common/src/: lib.rs
contracts/tetris_contract/: Cargo.toml
contracts/tetris_contract/src/: lib.rs
contracts/tetris_service/: Cargo.toml
contracts/tetris_service/src/: lib.rs
src/: App.tsx  index.css  types.ts  vite-env.d.ts
src/components/: AccountModal.tsx  GameBoard.tsx  GameOverModal.tsx  Instructions.tsx  Leaderboard.tsx  MobileOverlay.tsx  TetrisBackground.tsx
src/hooks/: useGameLogic.ts  useLineraGameLogic.ts
src/lib/: lineraClient.ts
supabase/migrations/: 20250307095302_tender_night.sql
