[package]
name = "tetris_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
linera-sdk = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true }
async-trait = { workspace = true }
tetris_common = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true 